# aetheria-old

./: .gitmodules  CMakeLists.txt
shaders/: composite.frag  composite.frag.spv  composite.vert  composite.vert.spv  frag.spv  shader.frag  shader.vert  vert.spv
src/: main.c
src/core/: core.c  core.h  input.c  input.h  log.h  math.c  math.h  types.h
src/graphics/: gltf.c  gltf.h  model.c  model.h  renderer.c  renderer.h  window.c  window.h
src/graphics/framegraph/: framegraph.c  framegraph.h
src/graphics/vulkan/: buffer.c  buffer.h  command.c  command.h  context.c  context.h  descriptor.c  descriptor.h  device.c  device.h  image.c  image.h  instance.c  instance.h  physical.c  physical.h  pipeline.c  pipeline.h  renderpass.c  renderpass.h  shader.c  shader.h  swapchain.c  swapchain.h  vertex.c  vertex.h
